--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/management2
 spring.datasource.username=management
 spring.datasource.password=123!123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-jpa.properties.javax.persistence.validation.mode=none
+spring.jpa.properties.javax.persistence.validation.mode=none
