--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=management
 spring.datasource.password=123!123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.javax.persistence.validation.mode=none
+spring.data.web.pageable.default-page-size=2
+spring.data.web.pageable.max-page-size=2
